JBM-375 define env vars required to run Grails app properly